# dotfiles

./: .alacritty.toml  .chezmoi.toml.tmpl  .chezmoiignore  .chezmoiignore.tmpl  .chezmoiremove  .gitconfig  .gitignore  .tmux.conf  .vimrc  .zshrc  Brewfile  Brewfile.tmpl  Microsoft.PowerShell_profile.ps1  README.md  config.fish  dot_alacritty.toml  dot_gitconfig  dot_gitconfig-company  dot_gitconfig-company.tmpl  dot_gitconfig-oss  dot_gitignore  dot_krew-plugin.txt  krew-plugins.txt  private_Brewfile-company.tmpl  private_dot_gitconfig-company.tmpl  private_dot_gitconfig-git-ai.tmpl  private_dot_npmrc  wt.json
.chezmoidata/: packages.toml
.chezmoiscripts/: run_after_15-remove-git-ai.sh.tmpl  run_after_20-create-npm-global-prefix.sh.tmpl  run_after_25-install-npm-clis.sh.tmpl  run_after_25-install-playwright-cli.sh.tmpl  run_after_30-install-markitdown-cli.sh.tmpl  run_after_35-install-agent-skills.sh.tmpl  run_after_40-install-locked-agent-skills.sh.tmpl  run_once_after_10-install-krew.sh.tmpl  run_once_before_00-install-homebrew.sh.tmpl  run_onchange_after_05-install-homebrew-packages.sh.tmpl  run_onchange_after_06-install-worktrunk-opencode-plugin.sh.tmpl  run_onchange_after_07-install-rtk-opencode-hook.sh.tmpl  run_onchange_after_08-set-default-shell-fish.sh.tmpl  run_onchange_after_15-install-git-ai.sh.tmpl  (+3 more)
dot_agents/skills/rust-skills/checks/: Cargo.toml  README.md  analyze.py  baseline.txt  dot_gitignore  executable_check.sh  gen.py  gen_index.py  rust-toolchain.toml  validate.py
dot_agents/skills/rust-skills/checks/src/: lib.rs
dot_config/: starship.toml
(+210 files in other folders)
